package domain.blackjack

enum class Action {
    HIT,
    STAY,
}
