package domain.card

enum class Suit {
    SPADE,
    HEART,
    DIAMOND,
    CLUB
}